feat: migrated to jdk21; fixed some issues;